# herdr-controller

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: herdr.py  main.py  models.py
web/: package-lock.json  package.json
web/app/: layout.tsx
web/app/api/agents/: route.ts
web/app/api/agents/[target]/bubble/: route.ts
web/app/api/agents/[target]/focus/: route.ts
web/app/api/agents/[target]/read/: route.ts
web/app/api/agents/[target]/send/: route.ts
web/app/api/agents/start/: route.ts
web/app/api/agents/stream/: route.ts
web/app/api/panes/[id]/: route.ts
web/app/api/summary/: route.ts
web/app/office/: page.tsx
web/components/: dashboard.tsx  new-agent-dialog.tsx  terminal-panel.tsx  use-agents.ts
web/components/office/: game-music.tsx  office-scene.tsx  text-texture.ts
web/lib/: herdr-server.ts  herdr.ts
