[project]
name = "herdr-controller"
version = "0.1.0"
description = "FastAPI server to control and observe an active herdr instance, focused on agents"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
herdr-controller = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
